---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/for_iter_unpack_py38.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..106,
        body: Suite {
            range: 0..106,
            node_index: NodeIndex(None),
            statements: [
                For(
                    StmtFor {
                        node_index: NodeIndex(None),
                        range: 43..63,
                        is_async: false,
                        target: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 47..48,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        iter: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 52..58,
                                elts: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 52..54,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 53..54,
                                                    id: Name("a"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 57..58,
                                            id: Name("b"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                        body: Suite {
                            range: 60..63,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 60..63,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 60..63,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        orelse: Suite {
                            range: 63..63,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                    },
                ),
                For(
                    StmtFor {
                        node_index: NodeIndex(None),
                        range: 64..84,
                        is_async: false,
                        target: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 68..69,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        iter: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 74..79,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 74..75,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 77..79,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 78..79,
                                                    id: Name("b"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                        body: Suite {
                            range: 81..84,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 81..84,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 81..84,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        orelse: Suite {
                            range: 84..84,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                    },
                ),
                For(
                    StmtFor {
                        node_index: NodeIndex(None),
                        range: 85..105,
                        is_async: false,
                        target: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 89..90,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                        iter: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 94..100,
                                elts: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 94..96,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 95..96,
                                                    id: Name("a"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 98..100,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 99..100,
                                                    id: Name("b"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                        body: Suite {
                            range: 102..105,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 102..105,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 102..105,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                        orelse: Suite {
                            range: 105..105,
                            node_index: NodeIndex(None),
                            statements: [],
                        },
                    },
                ),
            ],
        },
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.8"}
2 | for x in *a,  b: ...
  |          ^^ Syntax Error: Cannot use iterable unpacking in `for` statements on Python 3.8 (syntax was added in Python 3.9)
3 | for x in  a, *b: ...
4 | for x in *a, *b: ...
  |


  |
1 | # parse_options: {"target-version": "3.8"}
2 | for x in *a,  b: ...
3 | for x in  a, *b: ...
  |              ^^ Syntax Error: Cannot use iterable unpacking in `for` statements on Python 3.8 (syntax was added in Python 3.9)
4 | for x in *a, *b: ...
  |


  |
2 | for x in *a,  b: ...
3 | for x in  a, *b: ...
4 | for x in *a, *b: ...
  |          ^^ Syntax Error: Cannot use iterable unpacking in `for` statements on Python 3.8 (syntax was added in Python 3.9)
  |


  |
2 | for x in *a,  b: ...
3 | for x in  a, *b: ...
4 | for x in *a, *b: ...
  |              ^^ Syntax Error: Cannot use iterable unpacking in `for` statements on Python 3.8 (syntax was added in Python 3.9)
  |
